fixed header issue on mobile

--- a/src/app/components/navigation/mobile-navigation/mobile-navigation.component.scss
+++ b/src/app/components/navigation/mobile-navigation/mobile-navigation.component.scss
@@ -5,7 +5,7 @@ $image-height: 75px;
 $image-width: 100px;
 
 section#navigation-container {
-  z-index: 100;
+
   top: 0;
   left: 0;
   right: 0;
@@ -13,6 +13,7 @@ section#navigation-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 10000;
 
   div#navigation {
 
