--- a/src/app/components/slide-side-navigation/slide-side-navigation.component.scss
+++ b/src/app/components/slide-side-navigation/slide-side-navigation.component.scss
@@ -44,7 +44,7 @@ section#slide-side-navigation{
 
 
   .content{
-    overflow: scroll;
+
     max-width: 0;
     transition: all ease-in-out .2s ;
     z-index: 100;
