--- a/src/app/pages/products/product.page.scss
+++ b/src/app/pages/products/product.page.scss
@@ -81,8 +81,6 @@
 
       .product-group-content {
         padding: 5px;
-        min-height: 200px;
-        max-height: 200px;
         text-align: center;
         overflow: hidden;
         text-overflow: ellipsis;
